--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   
   <body>
     <!-- Las etiquetas no estaban dentro del body -->
+    <!-- David de la Rosa -->
+    <h1>Practicando git en ITLA</h1>
     <p>Hola Practica2 funciona bien</p>
     <p>Estoy aprendiendo Devops en Itla</p>
-    <p>Probando el pull request</p>
     <br>
     <h6>isael was here!</h6>
   </body>
